Bug 1527392 - Do not clamp computed width and height by min-/max- values. r=mats

The spec says that when there's no box or the property doesn't apply, the
computed value should be returned.

That's not what we're doing right now, we're clamping by min-/max- values, which
is wrong.

This patch makes us match other engines and the spec, and it's an attempt to get
interop on resolved values in:

  https://github.com/w3c/csswg-drafts/issues/3678

WebKit fails the WPT test, but due to a different reason:

  https://bugs.webkit.org/show_bug.cgi?id=197814

Differential Revision: https://phabricator.services.mozilla.com/D30780

--HG--
extra : moz-landing-system : lando